--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "@react-three/fiber": "^9.1.0",
     "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.174.0",
+    "axios": "^1.8.4",
     "framer-motion": "^12.5.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
